--- a/hamburger/index.html
+++ b/hamburger/index.html
@@ -5,66 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-    <title>Assignmesnt 3</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Hamburger Menu from CSS</title>
 </head>
 
 <body>
-    <header>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#collapsable-nav" aria-expanded="false">
-                        <span class="sr-only">Toogle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Food, LLC</a>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger">
+            <div></div>
+        </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
                 </div>
-
             </div>
-        </nav>
-    </header>
-
-    <h1>Our Menu</h1>
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 cont cont1">
-            <div class="he" id="he1">Burger</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quod illum iste velit
-                expedita magni quibusdam excepturi quos sed porro maxime illo ut perferendis vero, dicta praesentium
-                eius
-                ratione optio. Voluptate sequi consequatur fuga, veniam accusantium sunt voluptas laboriosam neque
-                quibusdam
-                cum molestias. Pariatur, voluptates? Numquam quisquam libero at itaque!</p>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12 cont cont1">
-            <div class="he" id="he2">Pizza</div>
-            <p>ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eveniet molestias eum
-                perspiciati s autem, temporibus aliquam, dicta neque sit similique culpa non nihil aliquid sequi sunt
-                iste?
-                Deleniti quibusdam numquam nemo doloribus ea facilis iusto at quasi magnam, alias autem dolorum nihil
-                eaquevelit aliquid ipsa quisquam ex voluptate</p>
-        </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 cont">
-            <div class="he" id="he3">Sushi</div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eveniet molestias eum
-                perspiciatis autem, temporibus aliquam, dicta neque sit similique culpa non nihil aliquid sequi sunt
-                iste?
-                Deleniti quibusdam numquam nemo doloribus ea facilis iusto at quasi magnam, alias autem dolorum nihil
-                eaque
-                velit aliquid ipsa quisquam ex voluptate enim.</p>
         </div>
     </div>
-</body>
-</html>
 
+    <header class="showcase">
+        <div class="container showcase-inner">
+            <h1>Welcome</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, tempore nulla? Modi quae fugit incidunt
+                cumque ullam officia impedit quia itaque error inventore neque blanditiis, aliquid, beatae nisi ad est?
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </header>
 </body>
 
 </html>
