--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -5,24 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="index.css">
-    <title>Assignmesnt Solution of Module 2</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+    <title>Assignmesnt 3</title>
 </head>
 
 <body>
     <header>
         <nav id="header-nav" class="navbar navbar-default">
-            <div class="container">
-                Food, LLC
+            <div class="container-fluid">
+                <div class="menu-wrap">
+                    <input type="checkbox" class="toggler">
+                    <div class="hamburger">
+                        <div></div>
+                    </div>
+                    <div class="menu">
+                        <div>
+                            <div>
+                                <ul>
+                                    <li><a href="#">Pizza</a></li>
+                                    <li><a href="#">Burger</a></li>
+                                    <li><a href="#">Sushi</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Food, LLC</a>
+                </div>
+       
             </div>
-
         </nav>
     </header>
-   
-   
-   
+
     <h1>Our Menu</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 cont cont1">
@@ -54,4 +74,8 @@
         </div>
     </div>
 </body>
+</html>
+
+</body>
+
 </html>
