--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -5,44 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-    <title>Assignmesnt 3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="test.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    
+    <title>Assignmesnt Solution of Module 2</title>
 </head>
-
-<body>
-    <header>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="menu-wrap">
-                    <input type="checkbox" class="toggler">
-                    <div class="hamburger">
-                        <div></div>
-                    </div>
-                    <div class="menu">
-                        <div>
-                            <div>
-                                <ul>
-                                    <li><a href="#">Pizza</a></li>
-                                    <li><a href="#">Burger</a></li>
-                                    <li><a href="#">Sushi</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+<header class="container-fluid">
+    <nav id="header-nav" class="navbar navbar-default navbar-dark bg-dark">
+        <div class="container">
+            <div class="navbar-header">
+                <div class="navbar-brand">
+                    <a href="index.html">Food, LLC</a>
                 </div>
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Food, LLC</a>
-                </div>
-       
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                   <span class="sr-only">Toggle navigation</span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+               </button>
             </div>
-        </nav>
-    </header>
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul id="nav-list" class="nav navbar-nav navbar-right">
+                    <li><a href="#Pizza">Pizza</a></li>
+                    <li><a href="#Burger">Burger</a></li>
+                    <li><a href="#Sushi">Sushi</a></li>
+                </ul>
+            </div>
+        </div>
 
+    </nav>
+</header>
+<body>
+   
     <h1>Our Menu</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 cont cont1">
@@ -74,8 +72,4 @@
         </div>
     </div>
 </body>
-</html>
-
-</body>
-
 </html>
